--- a/src/main/resources/application1.properties
+++ b/src/main/resources/application1.properties
@@ -42,9 +42,7 @@ spring.mail.default-encoding=UTF-8
 mail.fromMail.addr = test@163.com
 
 #thymeleaf start
-#   spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
-#???????,??????????
 spring.thymeleaf.cache=false
-#thymeleaf end
