--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
 			<version>4.4.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
+
 
 	</dependencies>
 
